[package]
name = "mdbook-cmdrun"
version = "0.5.0"
edition = "2021"
authors = ["FauconFan <joseph0priou@gmail.com>"]
description = "mdbook preprocessor to run arbitrary commands"
license = "MIT"
homepage = "https://github.com/FauconFan/mdbook-cmdrun"
repository = "https://github.com/FauconFan/mdbook-cmdrun"
keywords = ["mdbook", "runcmd", "preprocessor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.*"
mdbook = "0.4.*"
serde_json = "1.0.*"
anyhow = "1.0.*"
regex = "1.*.*"
lazy_static = "1.4.0"
toml = "0.7.5"
serde = "1.0.164"
cfg-if = "1.0.0"
