[package]
name = "mdbook-cmdrun"
version = "0.7.2"
edition = "2021"
authors = ["FauconFan <joseph0priou@gmail.com>"]
description = "mdbook preprocessor to run arbitrary commands"
license = "MIT"
homepage = "https://github.com/FauconFan/mdbook-cmdrun"
repository = "https://github.com/FauconFan/mdbook-cmdrun"
keywords = ["mdbook", "runcmd", "preprocessor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
clap = "4.*.*"
mdbook = "0.4.*"
serde = "1.0.*"
serde_json = "1.0.*"
regex = "1.*.*"
toml = "0.*.*"
lazy_static = "1.*.*"
cfg-if = "1.0.0"
